WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182096
WebDriver: test imported/selenium/py/test/selenium/webdriver/common/alerts_tests.py crashes in debug
https://bugs.webkit.org/show_bug.cgi?id=182096
Summary
WebDriver: test imported/selenium/py/test/selenium/webdriver/common/alerts_te...
Carlos Garcia Campos
Reported
2018-01-25 05:42:14 PST
WebDriverTests/imported/selenium/py/test/selenium/webdriver/common/alerts_tests.py::testPromptShouldUseDefaultValueIfNoKeysSent[WebKitGTK] PASSED WebDriverTests/imported/selenium/py/test/selenium/webdriver/common/alerts_tests.py::testPromptShouldHaveNullValueIfDismissed[WebKitGTK] PASSED WebDriverTests/imported/selenium/py/test/selenium/webdriver/common/alerts_tests.py::testHandlesTwoAlertsFromOneInteraction[WebKitGTK] PASSED WebDriverTests/imported/selenium/py/test/selenium/webdriver/common/alerts_tests.py::testShouldHandleAlertOnPageLoad[WebKitGTK] ASSERTION FAILED: m_table ../../Source/WTF/wtf/HashTable.h(212) : void WTF::HashTableConstIterator<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::checkValidity() const [with Key = long unsigned int; Value = WTF::KeyValuePair<long unsigned int, WTF::RefPtr<Inspector::BackendDispatcher::CallbackBase> >; Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<long unsigned int, WTF::RefPtr<Inspector::BackendDispatcher::CallbackBase> > >; HashFunctions = WTF::IntHash<long unsigned int>; Traits = WTF::HashMap<long unsigned int, WTF::RefPtr<Inspector::BackendDispatcher::CallbackBase> >::KeyValuePairTraits; KeyTraits = WTF::HashTraits<long unsigned int>] 1 0x7f43d99385b0 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x7f43d99385b0] 2 0x7f43e2db4d6d /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF22HashTableConstIteratorImNS_12KeyValuePairImNS_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_7IntHashImEENS_7HashMapImS8_SD_NS_10HashTraitsImEENSF_IS8_EEE18KeyValuePairTraitsESG_E13checkValidityEv+0x3d) [0x7f43e2db4d6d] 3 0x7f43e2db1f58 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF22HashTableConstIteratorImNS_12KeyValuePairImNS_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_7IntHashImEENS_7HashMapImS8_SD_NS_10HashTraitsImEENSF_IS8_EEE18KeyValuePairTraitsESG_EppEv+0x18) [0x7f43e2db1f58] 4 0x7f43e2dadb60 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF17HashTableIteratorImNS_12KeyValuePairImNS_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS_13DumbPtrTraitsIS5_EEEEEENS_24KeyValuePairKeyExtractorIS9_EENS_7IntHashImEENS_7HashMapImS8_SD_NS_10HashTraitsImEENSF_IS8_EEE18KeyValuePairTraitsESG_EppEv+0x18) [0x7f43e2dadb60] 5 0x7f43e2da7ce0 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF24HashTableIteratorAdapterINS_9HashTableImNS_12KeyValuePairImNS_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS_13DumbPtrTraitsIS6_EEEEEENS_24KeyValuePairKeyExtractorISA_EENS_7IntHashImEENS_7HashMapImS9_SE_NS_10HashTraitsImEENSG_IS9_EEE18KeyValuePairTraitsESH_EESA_EppEv+0x1c) [0x7f43e2da7ce0] 6 0x7f43e2da05b2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3WTF21HashTableKeysIteratorINS_9HashTableImNS_12KeyValuePairImNS_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS_13DumbPtrTraitsIS6_EEEEEENS_24KeyValuePairKeyExtractorISA_EENS_7IntHashImEENS_7HashMapImS9_SE_NS_10HashTraitsImEENSG_IS9_EEE18KeyValuePairTraitsESH_EEmS9_EppEv+0x18) [0x7f43e2da05b2] 7 0x7f43e2d8f426 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit20WebAutomationSession50respondToPendingPageNavigationCallbacksWithTimeoutERN3WTF7HashMapImNS1_6RefPtrIN9Inspector17BackendDispatcher12CallbackBaseENS1_13DumbPtrTraitsIS6_EEEENS1_7IntHashImEENS1_10HashTraitsImEENSC_IS9_EEEE+0x1ce) [0x7f43e2d8f426] 8 0x7f43e2d8f8c8 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x6e688c8) [0x7f43e2d8f8c8] 9 0x7f43e2d9a578 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x6e73578) [0x7f43e2d9a578] 10 0x7f43e29fff68 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZNK3WTF8FunctionIFvvEEclEv+0x5e) [0x7f43e29fff68] 11 0x7f43d99661e8 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop11performWorkEv+0xbc) [0x7f43d99661e8] 12 0x7f43d99b00aa /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2a0b0aa) [0x7f43d99b00aa] 13 0x7f43d99b00ce /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2a0b0ce) [0x7f43d99b00ce] 14 0x7f43d99b004a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2a0b04a) [0x7f43d99b004a] 15 0x7f43d99b0079 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x2a0b079) [0x7f43d99b0079] 16 0x7f43db48a81a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_context_dispatch+0x13a) [0x7f43db48a81a] 17 0x7f43db48aba8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(+0x49ba8) [0x7f43db48aba8] 18 0x7f43db48aec2 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libglib-2.0.so.0(g_main_loop_run+0xc2) [0x7f43db48aec2] 19 0x7f43db9aedf0 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgtk-3.so.0(gtk_dialog_run+0x160) [0x7f43db9aedf0] 20 0x7f43e315651a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_Z21webkitScriptDialogRunP19_WebKitScriptDialogP14_WebKitWebView+0xac) [0x7f43e315651a] 21 0x7f43e31665e2 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_Z25webkitWebViewScriptDialogP14_WebKitWebViewP19_WebKitScriptDialog+0x23) [0x7f43e31665e2] 22 0x7f43cf828038 /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call_unix64+0x4c) [0x7f43cf828038] 23 0x7f43cf827a9a /usr/lib/x86_64-linux-gnu/libffi.so.6(ffi_call+0x32a) [0x7f43cf827a9a] 24 0x7f43e98dbf58 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_cclosure_marshal_generic+0x1e8) [0x7f43e98dbf58] 25 0x7f43e98db745 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_closure_invoke+0x145) [0x7f43e98db745] 26 0x7f43e98ed9bd /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(+0x219bd) [0x7f43e98ed9bd] 27 0x7f43e98f5be8 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit_valist+0x938) [0x7f43e98f5be8] 28 0x7f43e98f6572 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/DependenciesGTK/Root/lib/libgobject-2.0.so.0(g_signal_emit+0x82) [0x7f43e98f6572] 29 0x7f43e3129f95 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_Z31webkitWebViewRunJavaScriptAlertP14_WebKitWebViewRKN3WTF7CStringE+0x79) [0x7f43e3129f95] 30 0x7f43e3110304 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN8UIClient18runJavaScriptAlertEPN6WebKit12WebPageProxyERKN3WTF6StringEPNS0_13WebFrameProxyERKN7WebCore18SecurityOriginDataEONS3_8FunctionIFvvEEE+0x4a) [0x7f43e3110304] 31 0x7f43e2c8300e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit12WebPageProxy18runJavaScriptAlertEmRKN7WebCore18SecurityOriginDataERKN3WTF6StringEONS5_3RefIN8Messages12WebPageProxy18RunJavaScriptAlert12DelayedReplyENS5_13DumbPtrTraitsISD_EEEE+0x180) [0x7f43e2c8300e] RemoteInspector failed to send DBus message: The connection is closed ERROR: WebLoaderStrategy::networkProcessCrashed: failing all pending resource loaders /home/slave/webkitgtk/gtk-linux-64-debug/build/Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp(392) : void WebKit::WebLoaderStrategy::networkProcessCrashed() LEAK: 80 BidiRun FAILEDRemoteInspectorServer failed to send DBus message: The connection is closed
Attachments
Patch
(3.14 KB, patch)
2018-01-25 05:45 PST
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-01-25 05:45:36 PST
Created
attachment 332259
[details]
Patch
Carlos Garcia Campos
Comment 2
2018-01-25 05:50:16 PST
Committed
r227601
: <
https://trac.webkit.org/changeset/227601
>
Radar WebKit Bug Importer
Comment 3
2018-01-25 05:51:25 PST
<
rdar://problem/36865218
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug